--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "lqip": "node scripts/build-lqip-from-homeitems.mjs",
+    "build": "npm run lqip && vite build",
     "lint": "eslint .",
     "preview": "vite preview"
   },
@@ -33,6 +34,8 @@
     "remark-frontmatter": "^5.0.0",
     "remark-mdx-frontmatter": "^5.2.0",
     "tailwindcss": "^3.4.3",
+    "undici": "^6.19.8",
+    "sharp": "^0.33.5",
     "vite": "^7.0.0"
   }
 }
