--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@mdx-js/react": "^3.1.0",
+    "clsx": "^2.1.1",
     "framer-motion": "^12.23.12",
     "lucide-react": "^0.539.0",
     "react": "^19.1.0",
@@ -33,9 +34,9 @@
     "postcss": "^8.5.6",
     "remark-frontmatter": "^5.0.0",
     "remark-mdx-frontmatter": "^5.2.0",
+    "sharp": "^0.33.5",
     "tailwindcss": "^3.4.3",
     "undici": "^6.19.8",
-    "sharp": "^0.33.5",
     "vite": "^7.0.0"
   }
 }
